@@ -3,6 +3,7 @@ Cacti CHANGELOG
 -issue#1334: Console->Users->(Edit) Permissions checkmark descriptions missing
 -issue#1336: Fix issue with $config not being defined
 -issue: Fixed some language string inconsistencies
+-feature: Allow searching of SNMP Index in View Data Query Cache
 -feature: Updated Dutch translations
 
 1.1.36
